<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.mainscreen.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_margins"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:id="@+id/topheadlines_button"
            android:onClick="navigateToTopHeadlines"
            android:layout_marginTop="@dimen/button_margins"
            android:layout_marginBottom="@dimen/button_margins"
            android:text="@string/topheadlineds_buttonlabel"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:id="@+id/offlinefirst_button"
            android:onClick="navigateToOfflineReading"
            android:layout_marginTop="@dimen/button_margins"
            android:layout_marginBottom="@dimen/button_margins"
            android:text="@string/offlinefirst_buttonlabel"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:id="@+id/newssources_button"
            android:onClick="navigateToNewsSources"
            android:layout_marginTop="@dimen/button_margins"
            android:layout_marginBottom="@dimen/button_margins"
            android:text="@string/newssources_buttonlabel"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:id="@+id/countries_button"
            android:onClick="navigateToCountries"
            android:layout_marginTop="@dimen/button_margins"
            android:layout_marginBottom="@dimen/button_margins"
            android:text="@string/countries_buttonlabel"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:id="@+id/languages_button"
            android:onClick="navigateToLanguages"
            android:layout_marginTop="@dimen/button_margins"
            android:layout_marginBottom="@dimen/button_margins"
            android:text="@string/languages_buttonlabel"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:id="@+id/search_button"
            android:onClick="navigateToSearch"
            android:layout_marginTop="@dimen/button_margins"
            android:layout_marginBottom="@dimen/button_margins"
            android:text="@string/search_buttonlabel"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>